--- a/client/index.html
+++ b/client/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" type="text/css" href="path/to/notifications.css">
+    <link rel="icon" href="src/assets/react.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Task 4</title>
   </head>
   <body>
     <div id="root"></div>
